--- a/숙제/0707/style.css
+++ b/숙제/0707/style.css
@@ -3,9 +3,15 @@ a {
 }
 
 a:hover {
+  color: white;
   background-color: red;
 }
 
-a::selection {
+input:focus {
+  color: white;
+  background: green;
+}
+
+input::placeholder {
   color: white;
 }
